--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br>
             <p>
               Kami sedang melakukan survei untuk persiapan acara reuni SMA Budi Utomo Angkatan 2010.<br>
-              Bantu kami mendata rencana tersebut dengan mengisi survei melalu tombol berikut:
+              Bantu kami merencanakan acara tersebut dengan mengisi survei berikut:
             </p>
             <div class="button-group">
               <a href="javascript:void()" data-toggle="modal" data-target="#daftar-form" class="btn btn-common">Isi Survei</a>
