--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 <i class="fa-brands fa-whatsapp-square"></i>
               </a>
             </div>
+            <br>
+            <p>&copy; 2024 <a href="https://angsle.id/" class="text-white">www.angsle.id</a> | All rights reserved</p>
           </div>
         </div>
       </div>
