Add Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VRSCQDDP8T"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VRSCQDDP8T');
+    </script>
   </head>
   <body>
     <div class="bg-wraper overlay has-vignette">
